--- a/app/build.gradle
+++ b/app/build.gradle
@@ -56,9 +56,7 @@ dependencies {
     implementation "androidx.navigation:navigation-ui-ktx:$navigation_version"
 
     // Jetpack Compose
-    implementation 'androidx.ui:ui-layout:0.1.0-dev02'
-    implementation 'androidx.ui:ui-material:0.1.0-dev02'
-    implementation 'androidx.ui:ui-tooling:0.1.0-dev02'
     implementation "androidx.compose.foundation:foundation:1.3.1"
     implementation "androidx.navigation:navigation-compose:2.5.3"
+    implementation "androidx.compose.material:material:1.3.1"
 }
