--- a/app/build.gradle
+++ b/app/build.gradle
@@ -14,7 +14,6 @@ android {
         targetSdk 33
         versionCode 1
         versionName "1.0"
-
         testInstrumentationRunner "androidx.test.runner.AndroidJUnitRunner"
     }
 
@@ -24,10 +23,12 @@ android {
             proguardFiles getDefaultProguardFile('proguard-android-optimize.txt'), 'proguard-rules.pro'
         }
     }
+
     compileOptions {
         sourceCompatibility JavaVersion.VERSION_1_8
         targetCompatibility JavaVersion.VERSION_1_8
     }
+
     kotlinOptions {
         jvmTarget = '1.8'
     }
@@ -43,6 +44,7 @@ android {
 
 dependencies {
     def navigation_version = "2.5.3"
+    def jetpack_compose_version = "1.3.1"
 
     implementation 'androidx.core:core-ktx:1.9.0'
     implementation 'androidx.appcompat:appcompat:1.6.0'
@@ -57,7 +59,6 @@ dependencies {
     implementation "androidx.navigation:navigation-ui-ktx:$navigation_version"
 
     // Jetpack Compose
-    implementation "androidx.compose.foundation:foundation:1.3.1"
-    implementation "androidx.navigation:navigation-compose:2.5.3"
-    implementation "androidx.compose.material:material:1.3.1"
+    implementation "androidx.compose.material:material:$jetpack_compose_version"
+    implementation "androidx.compose.foundation:foundation:$jetpack_compose_version"
 }
